# what-songs-should-restaurant-play

./: .gitignore  CLAUDE.md  Linear Algebra and Restaurant Rec.md  Sonic_Sommelier_Progress_Update.pptx  main.py  pyproject.toml  ~$Sonic_Sommelier_Progress_Update.pptx
.claude/: settings.json
deployment_draft/api/: api_v1.py  api_v2.py  requirements.txt
deployment_draft/artifact/: build_artifact.py  requirements.txt
deployment_draft/streamlit/: app.py
notebooks/: 01_spotify_eda.ipynb  01b_spotify_new_eda_pca.ipynb  02_yelp_eda.ipynb  02b_yelp_cuisine_pca.ipynb  03_covariance.ipynb  03_covariance_pca.ipynb  04_pca_.ipynb  05_trialrecommender.ipynb  05b_recommender.ipynb  05c_recommender_simplified.ipynb  05d_recommender_cuisine.ipynb  05e_popularity_penalty_comparison.ipynb
notes/: Linear Algebra and Restaurant Rec.md  Project Milestone.ipynb  Recommendations_Engine_thought.md  progress_log.md  weight_matrix_methodology.md
scripts/: spotify_auth.py
