[project]
name = "restaurant-recommendation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.2.6",
    "scikit-learn==1.7.2",
    "joblib==1.5.3",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "streamlit>=1.59.1",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
]
